完善性能测试